--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Varela Round", sans-serif;
+  --theme-color: #03775e;
+  --theme-shadow: 0 1px 8px rgba(0, 0, 0, 0.1),
+    0 0 35px rgba(0, 0, 0, 0.3) inset;
+}
+*,
+:after,
+:before {
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 850px) {
+  .contact-content-wrapper {
+    overflow-x: hidden;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .about-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
   }
-  to {
-    transform: rotate(360deg);
+  .zoomin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
