--- a/src/App.css
+++ b/src/App.css
@@ -31,4 +31,19 @@ a {
     flex-direction: column;
     align-items: center;
   }
+  thead{
+    display: none;
+  }
+  tr{
+    display: flex;
+    flex-direction: column;   
+    align-content: center;
+  }
+  .cardy table tbody tr td{
+    transform: scale(1.2);
+    border:none;
+  }
+  .cardy table tbody tr{
+    border-bottom: 1px solid lightgrey; 
+  }  
 }
